[tool.poetry]
name = "mosaic-generator"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]
readme = "README.md"
packages = [{include = "mosaic_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
