[tool.poetry]
name = "mosaic-generator"
version = "0.1.0"
description = ""
authors = ["Cory Randolph <coryroyce@gmail.com>"]
readme = "README.md"
packages = [{include = "mosaic_generator"}]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.12.0"
isort = "^5.10.1"
opencv-python = "^4.6.0.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
